--- a/api/.env
+++ b/api/.env
@@ -2,6 +2,12 @@ DB_USER=postgres
 DB_PASSWORD=1234
 DB_HOST=localhost:5432
 API_KEY=3acfcb58bb1d44ba86ca5af2eec7566f
+API_KEYmia=3acfcb58bb1d44ba86ca5af2eec7566f
+API_KEYMartin=2cf1d780b2f44897983c29b8f27d76cc
+API_KEYotra=2d0fafd47b274178b7100d9793925962
+d609fd1205e84af1b509fc03573c0733
+
+
 API_URL=https://api.spoonacular.com/recipes/716429/information?apiKey=3acfcb58bb1d44ba86ca5af2eec7566f&addRecipeInformation=true
 
 
